// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner> renders correctly 1`] = `
<span
  className=""
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`<Spinner> renders dark correctly 1`] = `
<span
  className=""
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`<Spinner> renders dimensions correctly 1`] = `
<span
  className=""
  style={
    Object {
      "height": 30,
      "width": 30,
    }
  }
/>
`;
